# utools-json

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  components.d.ts  index.html  package.json  tsconfig.json  vite.config.js
.github/: copilot-instructions.md
doc/: CHANGELOG.md
public/: plugin.json
rjson/: Cargo.toml  LICENSE_MIT
rjson/src/: lib.rs
src/: App.vue  main.ts
src/assets/: base.css  main.css
src/components/: EditorSetting.vue  JsonEditor.vue  MonacoDiffEditor.vue  MonacoEditor.vue  ServerSelectionDialog.vue
src/composables/: useEditorSetting.ts  useServerStore.ts
src/jaq_play/: jaq_play.d.ts  jaq_play.js  jaq_play_bg.wasm
src/utils/: fromJson.ts  skeleton.ts  tableJson.ts  tableJson_main.ts  tableJson_test.ts  toJson.ts  xml.ts
src/workers/: jaq.ts  monaco.ts
