[package]
name = "rjson"
version = "0.1.0"
authors = ["LiJia <lijia.c@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
serde = "1"
serde_json = {version = "1", features = ["preserve_order"]}
json5 = "1.3.1"
quick-xml = { version = "0.39.2", features = ["serialize"] }
base64 = "0.22.1"
saphyr = "0.0.6"
toml = "1.1.2"
csv = "1.4.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
